welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: too many arguments for constructor Array: (_length: Int)Array[T]
  var T = new Array(1,2,2,3,3,4,4,4,5,5,5,6,6,6,7);
          ^