welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array(1,2,2,3,3,4,4,4,5,5,5,6,6,6,7);
  return T(num-1)
}